--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 body{
-  background-color: rgba(128, 0, 128, 0.5);
+  background-color: #210002;
   font-family: Poppins;
   font-size: 15px;
 }
