--- a/source/stylesheets/components/_parallax.scss
+++ b/source/stylesheets/components/_parallax.scss
@@ -27,7 +27,8 @@
 }
 .banner .bg-4{
   background-image: image-url('parallax/ocean-wave.png');
-  bottom: 50px;
+  bottom: -210px;
+  background-size: unset;
 }
 .banner .bg-5{
   background-image: image-url('parallax/left-hill.png');
@@ -43,10 +44,9 @@
   top: 450px;
 }
 .banner .bg-8{
-  background-image: image-url('parallax/car-hill.png');
+  background-image: image-url('parallax/car-hill-cut1.png');
   background-size: unset;
-  top: 280px;
-  left: -140px;
+  background-repeat: no-repeat;
 }
 .banner .bg-9{
   background-image: image-url('parallax/palm-foreground.png');
@@ -66,8 +66,47 @@
   color: #fff;
 }
 
+
+@media screen and (max-width: 1200px){
+  .banner .bg-8 {
+    background-image: image-url('parallax/car-hill-cut2.png');
+  }
+}
+@media screen and (max-width: 1024px){
+  .banner .bg-3 {
+    bottom: 170px;
+  }
+  .banner .bg-5 {
+    top: 20px;
+  }
+  .banner .bg-6 {
+    top: 220px;
+  }
+  .banner .bg-8 {
+    background-image: image-url('parallax/car-hill-cut3.png');
+  }
+  .banner .bg-9{
+    background-image: image-url('parallax/palm-foreground-1024.png');
+  }
+}
 @media screen and (max-width: 768px){
   .banner h1{
-      font-size: 5rem;
+      font-size: 3rem;
+  }
+}
+@media screen and (max-width: 425px){
+  .banner .bg-8 {
+    background-image: image-url('parallax/car-hill-300.png');
+    bottom: 10px;
+  }
+  .banner .bg-9{
+    background-image: image-url('parallax/palm-foreground-425.png');
+    background-repeat: no-repeat;
+  }
+  .banner h1{
+    font-size: 2rem;
+  }
+  .intro {
+    min-height: 100vh;
   }
 }
