--- a/source/stylesheets/components/_parallax.scss
+++ b/source/stylesheets/components/_parallax.scss
@@ -95,12 +95,26 @@
   }
 }
 @media screen and (max-width: 425px){
+  .banner .bg-3 {
+    bottom: 200px;
+  }
+  .banner .bg-4 {
+    bottom: -160px;
+  }
+  .banner .bg-5 {
+    top: -10px;
+  }
+  .banner .bg-6 {
+    top: 220px;
+  }
+  .banner .bg-7 {
+    display: none;
+  }
   .banner .bg-8 {
     background-image: image-url('parallax/car-hill-300.png');
-    bottom: 10px;
+    bottom: 20px;
   }
   .banner .bg-9{
-    background-image: image-url('parallax/palm-foreground-425.png');
     background-repeat: no-repeat;
   }
   .banner h1{
