--- a/source/stylesheets/components/_parallax.scss
+++ b/source/stylesheets/components/_parallax.scss
@@ -99,23 +99,19 @@
     bottom: 60px;
   }
 }
-@media screen and (max-width: 1200px){
-  .banner .bg-8 {
-    background-image: image-url('parallax/car-hill-cut2.png');
-  }
-}
 @media screen and (max-width: 1024px){
   .banner .bg-3 {
-    bottom: 170px;
+    bottom: 70px;
   }
   .banner .bg-5 {
-    top: 20px;
+    top: 120px;
   }
   .banner .bg-6 {
     top: 220px;
   }
   .banner .bg-8 {
-    background-image: image-url('parallax/car-hill-cut3.png');
+    background-image: image-url('parallax/car-hill-900.png');
+    bottom: 0;
   }
   .banner .bg-9{
     background-image: image-url('parallax/palm-foreground-1024.png');
