--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,4 @@
 <%= partial 'partials/parallax' %>
 <%= partial 'partials/intro' %>
+<%= partial 'partials/portfolio' %>
 <%= partial 'partials/library' %>
