--- a/source/stylesheets/components/_portfolio.scss
+++ b/source/stylesheets/components/_portfolio.scss
@@ -1,14 +1,14 @@
 .portfolio-container{
   color: #eee;
-  // border: 2px solid;
   padding: 5rem 2rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .portfolio-card{
-  // border: 2px dotted;
   width: 90%;
   display: flex;
+  padding: 5rem 0;
 }
 .portfolio-text{
   padding: 0 5rem;
@@ -32,11 +32,14 @@
   }
 }
 @media screen and (max-width: 768px){
-  .portfolio-card {
+  .portfolio-card{
     flex-direction: column-reverse;
     align-items: center;
   }
-  .portfolio-text {
+  .reverse{
+    flex-direction: column;
+  }
+  .portfolio-text{
     padding: 1rem 5rem;
     width: 100%;
   }
