--- a/source/partials/portfolio.html.erb
+++ b/source/partials/portfolio.html.erb
@@ -1,40 +1,40 @@
 <div class="portfolio-container">
 
-<div class="portfolio-card">
-  <div class="portfolio-text">
+<div class="portfolio-card tab">
+  <div class="portfolio-text animation-show">
     <h2>Video Title</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
   </div>
-  <div class="portfolio-video">
+  <div class="portfolio-video animation-show">
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/kzjSF2VxAjE?si=TqJ9UeB-iiaKj4EK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </div>
 
-<div class="portfolio-card reverse">
-  <div class="portfolio-video">
+<div class="portfolio-card tab reverse">
+  <div class="portfolio-video animation-show">
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/FW6sqMEr85Y?si=Hgh0zTrP6vAAsP_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
-  <div class="portfolio-text">
+  <div class="portfolio-text animation-show">
     <h2>Video Title</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
   </div>
 </div>
 
-<div class="portfolio-card">
-  <div class="portfolio-text">
+<div class="portfolio-card tab">
+  <div class="portfolio-text animation-show">
     <h2>Video Title</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
   </div>
-  <div class="portfolio-video">
+  <div class="portfolio-video animation-show">
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DNN2cdf2ZHk?si=e26237hxdZr0SA1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </div>
 
-<div class="portfolio-card reverse">
-  <div class="portfolio-video">
+<div class="portfolio-card tab reverse">
+  <div class="portfolio-video animation-show">
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/W3nEvc7-xMo?si=079oTZpqnEZKPabP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
-  <div class="portfolio-text">
+  <div class="portfolio-text animation-show">
     <h2>Video Title</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
   </div>
