--- a/source/partials/library.html.erb
+++ b/source/partials/library.html.erb
@@ -16,3 +16,13 @@
       <p>Image Name</p>
   </div>
 </div>
+
+<!--IG Embed-->
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-3a6e78bd-fbd7-4c79-8416-ccd92ccd5ba3" data-elfsight-app-lazy></div>
+
+<!--Spotify Embed Solo-->
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/164VgxTozx99XCinCB9ITR?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+<!--Spotify Embed Playlist-->
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/78Y5mQFFIPF2K2ZGDy0kfi?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
