--- a/source/stylesheets/components/_hero.scss
+++ b/source/stylesheets/components/_hero.scss
@@ -47,3 +47,9 @@
   text-shadow: 2px 2px #000000;
   margin-bottom: 2rem;
 }
+
+@media all and (max-width: 426px) {
+  .hero {
+    height: 70vh;
+  }
+}
