--- a/source/stylesheets/components/_parallax.scss
+++ b/source/stylesheets/components/_parallax.scss
@@ -157,4 +157,13 @@
   .banner {
     height: 90vh;
   }
+  .banner .bg-3 {
+    bottom: -20px;
+  }
+  .banner .bg-5 {
+    top: 210px;
+  }
+  .banner .bg-7 {
+    top: 190px;
+  }
 }
