added starry background animation

--- a/source/partials/intro.html.erb
+++ b/source/partials/intro.html.erb
@@ -1,3 +1,7 @@
+<div class="stars"></div>
+<div class="twinkling"></div>
+<!--<div class="clouds"></div>-->
+
 <div class="tab intro">
   <h2 class="animation-show">Yayoi Maruoka</h2>
   <%= image_tag 'library/logo.jpg', class:"animation-show" %>
