adjusted spotify links

--- a/source/partials/portfolio.html.erb
+++ b/source/partials/portfolio.html.erb
@@ -4,6 +4,8 @@
   <div class="portfolio-text animation-show">
     <h2>Video Title</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
   </div>
   <div class="portfolio-video animation-show">
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/kzjSF2VxAjE?si=TqJ9UeB-iiaKj4EK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -17,6 +19,8 @@
   <div class="portfolio-text animation-show">
     <h2>Video Title</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
   </div>
 </div>
 
@@ -24,6 +28,8 @@
   <div class="portfolio-text animation-show">
     <h2>Video Title</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
   </div>
   <div class="portfolio-video animation-show">
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DNN2cdf2ZHk?si=e26237hxdZr0SA1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -37,6 +43,8 @@
   <div class="portfolio-text animation-show">
     <h2>Video Title</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
   </div>
 </div>
 
