--- a/source/stylesheets/components/_library.scss
+++ b/source/stylesheets/components/_library.scss
@@ -1,5 +1,6 @@
 .library{
   margin-top: 50px;
+  margin-bottom: 10rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
@@ -10,6 +11,9 @@
   height: 500px;
   object-fit: cover;
 }
+#eapps-instagram-feed-1 {
+  margin-bottom: 10rem;
+}
 
 @media screen and (max-width: 768px){
   .library{
@@ -17,5 +21,13 @@
   }
   .library img{
       height: 300px;
+  }
+}
+@media screen and (max-width: 426px){
+  .library{
+      margin-bottom: 5rem;
+  }
+  #eapps-instagram-feed-1 {
+    margin-bottom: 5rem;
   }
 }
