edited to template version

--- a/source/stylesheets/components/_intro.scss
+++ b/source/stylesheets/components/_intro.scss
@@ -8,7 +8,7 @@
   z-index: 10;
 }
 .intro img{
-  width: 130px;
+  width: 220px;
   height: 130px;
   border-radius: 50%;
 }
@@ -18,7 +18,7 @@
   text-align: center;
 }
 .intro button{
-  background-color: #FD0003;
+  background-color: #da30a5fb;
   padding: 10px 50px;
   border: 1px solid #591F1D;
   border-radius: 5px;
