--- a/source/partials/intro.html.erb
+++ b/source/partials/intro.html.erb
@@ -1,12 +1,13 @@
 <div class="stars"></div>
 <div class="twinkling"></div>
+
 <!--<div class="clouds"></div>-->
 
 <div class="tab intro">
-  <h2 class="animation-show">Yayoi Maruoka</h2>
-  <%= image_tag 'library/logo.jpg', class:"animation-show" %>
+  <h2 class="animation-show">Jane Doe</h2>
+  <%= image_tag 'library/card_logo.png', class:"animation-show" %>
   <p class="animation-show">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque rem obcaecati libero eaque veniam est necessitatibus consectetur commodi non rerum, sapiente distinctio dignissimos! Dolorem eaque velit quam tenetur sapiente, qui veniam iste beatae officiis facilis aut expedita commodi, voluptatibus ullam voluptates! Explicabo, nisi. Odit, neque aliquid maiores minima cumque iusto?
   </p>
-  <button class="animation-show">Subcribe</button>
+  <button class="animation-show">Hire CTA</button>
 </div>
