--- a/source/partials/parallax.html.erb
+++ b/source/partials/parallax.html.erb
@@ -2,7 +2,7 @@
         <div class="bg bg-1"></div>
         <div class="bg bg-2"></div>
         <div class="bg bg-3"></div>
-        <h1>Gravity Room</h1>
+        <h1>Portfolio Title</h1>
         <div class="bg bg-4"></div>
         <div class="bg bg-5"></div>
         <div class="bg bg-6"></div>
