--- a/source/stylesheets/components/_intro.scss
+++ b/source/stylesheets/components/_intro.scss
@@ -7,6 +7,12 @@
   align-items: center;
   z-index: 10;
 }
+.intro h2 {
+  font-family: "Space Grotesk", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 .intro img{
   width: 220px;
   height: 130px;
@@ -16,6 +22,10 @@
   width: 700px;
   max-width: 100%;
   text-align: center;
+  font-family: "Space Grotesk", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 .intro button{
   background-color: #da30a5fb;
@@ -23,6 +33,8 @@
   border: 1px solid #591F1D;
   border-radius: 5px;
   color: #fff;
-  font-family: Poppins;
-  font-weight: 500;
+  font-family: "Space Grotesk", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
