--- a/source/stylesheets/components/_parallax.scss
+++ b/source/stylesheets/components/_parallax.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
 .banner{
   height: 100vh;
   position: relative;
@@ -65,10 +63,10 @@
   width: 100%;
   text-align: center;
   font-size: 3rem;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-style: italic;
   color: #fff;
+  font-family: "Space Mono", serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 @media screen and (max-width: 1920px){
