--- a/source/stylesheets/components/_portfolio.scss
+++ b/source/stylesheets/components/_portfolio.scss
@@ -14,6 +14,12 @@
   padding: 0 5rem;
   width: 50%;
 }
+.portfolio-text h2, p {
+  font-family: "Space Grotesk", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 .portfolio-video{
   width: 991px;
   height: 558px;
