--- a/source/stylesheets/components/_portfolio.scss
+++ b/source/stylesheets/components/_portfolio.scss
@@ -1,9 +1,11 @@
 .portfolio-container{
   color: #eee;
-  padding: 5rem 2rem;
+  padding: 5rem 0rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
 .portfolio-card{
   width: 90%;
