--- a/source/stylesheets/components/_intro.scss
+++ b/source/stylesheets/components/_intro.scss
@@ -6,6 +6,8 @@
   justify-content: center;
   align-items: center;
   z-index: 10;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
 .intro h2 {
   font-family: "Space Grotesk", serif;
