--- a/source/stylesheets/components/_intro.scss
+++ b/source/stylesheets/components/_intro.scss
@@ -8,12 +8,14 @@
   z-index: 10;
   margin-left: 10vw;
   margin-right: 10vw;
+  margin-top: 32px;
 }
 .intro h2 {
   font-family: "Space Grotesk", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  margin-bottom: 16px;
 }
 .intro img{
   width: 220px;
@@ -28,6 +30,7 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  margin-top: 16px;
 }
 .intro button{
   background-color: #da30a5fb;
@@ -39,4 +42,5 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  margin-top: 16px;
 }
