added base navbar

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,4 @@
+<%= partial 'partials/navbar' %>
 <%= partial 'partials/parallax' %>
 <%= partial 'partials/intro' %>
 <%= partial 'partials/portfolio' %>
