set navbar links

--- a/source/partials/intro.html.erb
+++ b/source/partials/intro.html.erb
@@ -2,7 +2,7 @@
 <div class="twinkling"></div>
 <div class="clouds"></div>
 
-<div class="tab intro">
+<div id="About" class="tab intro">
   <h2 class="animation-show">Yayoi Maruoka</h2>
   <%= image_tag 'library/card_logo.png', class:"animation-show" %>
   <p class="animation-show">
