--- a/source/partials/library.html.erb
+++ b/source/partials/library.html.erb
@@ -1,4 +1,4 @@
-<div class="tab library">
+<div id="Gallery" class="tab library">
   <div class="animation-show">
       <%= image_tag 'library/9.jpg' %>
       <p>Image Name</p>
