--- a/source/partials/parallax.html.erb
+++ b/source/partials/parallax.html.erb
@@ -1,4 +1,4 @@
-    <div class="banner">
+    <div id="Home" class="banner">
         <div class="bg bg-1"></div>
         <div class="bg bg-2"></div>
         <div class="bg bg-3"></div>
