--- a/source/partials/navbar.html.erb
+++ b/source/partials/navbar.html.erb
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><a href="/">Home</a></li>
+    <li><a href="#Home">Home</a></li>
     <li><a href="#About">About</a></li>
     <li><a href="#Portfolio">Portfolio</a></li>
     <li><a href="#Gallery">Gallery</a></li>
