adjusted x-axis margins and fonts of navbar

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,3 +3,4 @@
 <%= partial 'partials/intro' %>
 <%= partial 'partials/portfolio' %>
 <%= partial 'partials/library' %>
+<%= partial 'partials/footer' %>
