--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -1,21 +1,38 @@
 nav {
-  border: 1px solid white;
+  border-bottom: 1px solid white;
+  background-color: black;
   width: 100%;
   height: 5vh;
   position: fixed;
   top: 0;
   z-index: 30;
+  display: flex;
+  justify-content: space-between;
+}
+nav h3 {
+  color: white;
+  margin-bottom: 0;
+  align-self: center;
+  margin-left: 2vw;
+  font-family: "Space Grotesk", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 nav ul {
-  border: 1px dotted white;
-  width: 100%;
+  width: 30%;
   height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  margin-right: 2vw;
 }
 nav ul li a {
   text-decoration: none;
   color: white;
+  font-family: "Space Grotesk", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
