--- a/source/partials/navbar.html.erb
+++ b/source/partials/navbar.html.erb
@@ -9,4 +9,5 @@
     <li><a href="#Gallery">Gallery</a></li>
     <li><a href="#Contact">Contact</a></li>
   </ul>
+  <button onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
 </nav>
