--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -36,3 +36,40 @@ nav ul li a {
   font-weight: 400;
   font-style: normal;
 }
+nav button {
+  display: none;
+}
+
+@media screen and (max-width: 1230px){
+  nav ul {
+    width: 35%;
+  }
+}
+@media screen and (max-width: 1024px){
+  nav ul {
+    width: 40%;
+  }
+}
+@media screen and (max-width: 900px){
+  nav ul {
+    width: 50%;
+  }
+}
+/* Mobile-specific styles */
+@media screen and (max-width: 768px) {
+  nav ul {
+    display: none;
+  }
+  nav h3 {
+    margin-left: 1vw;
+  }
+
+  nav button {
+    display: block;
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+    margin-right: 1vw;
+  }
+}
