fixed javascript for mobile nav menu

--- a/source/partials/navbar.html.erb
+++ b/source/partials/navbar.html.erb
@@ -1,8 +1,13 @@
 <nav>
-  <h3>
-    Gravity Room
-  </h3>
-  <ul>
+  <h3>Gravity Room</h3>
+  <ul class="desktop-menu">
+    <li><a href="#Home">Home</a></li>
+    <li><a href="#About">About</a></li>
+    <li><a href="#Portfolio">Portfolio</a></li>
+    <li><a href="#Gallery">Gallery</a></li>
+    <li><a href="#Contact">Contact</a></li>
+  </ul>
+  <ul class="mobile-menu" style="display: none;">
     <li><a href="#Home">Home</a></li>
     <li><a href="#About">About</a></li>
     <li><a href="#Portfolio">Portfolio</a></li>
