added icons to footer

--- a/source/partials/footer.html.erb
+++ b/source/partials/footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <ul>
-    <li><a href="#Home">Spotify</a></li>
-    <li><a href="#About">Instagram</a></li>
-    <li><a href="#Portfolio">RA-Dev</a></li>
+    <li><a href="#Home"><i class="fa-brands fa-spotify"></i></a></li>
+    <li><a href="#About"><i class="fa-brands fa-instagram"></i></a></li>
+    <li><a href="#Portfolio"><i class="fa-brands fa-soundcloud"></i></a></li>
   </ul>
 </footer>
