--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -10,7 +10,7 @@ footer {
   margin-top: 5rem;
 }
 footer ul {
-  width: 50%;
+  width: 70%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -25,4 +25,7 @@ footer ul li a {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+footer ul li a i {
+  font-size: 1.5rem;
 }
