--- a/source/stylesheets/components/_intro.scss
+++ b/source/stylesheets/components/_intro.scss
@@ -11,8 +11,7 @@
   margin-top: 32px;
 }
 .intro h2 {
-  font-family: "Space Grotesk", serif;
-  font-optical-sizing: auto;
+  font-family: "Kiwi Maru", serif;
   font-weight: 400;
   font-style: normal;
   margin-bottom: 16px;
@@ -26,8 +25,7 @@
   width: 700px;
   max-width: 100%;
   text-align: center;
-  font-family: "Space Grotesk", serif;
-  font-optical-sizing: auto;
+  font-family: "Kiwi Maru", serif;
   font-weight: 400;
   font-style: normal;
   margin-top: 16px;
@@ -38,8 +36,7 @@
   border: 1px solid #591F1D;
   border-radius: 5px;
   color: #fff;
-  font-family: "Space Grotesk", serif;
-  font-optical-sizing: auto;
+  font-family: "Kiwi Maru", serif;
   font-weight: 400;
   font-style: normal;
   margin-top: 16px;
