--- a/source/stylesheets/components/_library.scss
+++ b/source/stylesheets/components/_library.scss
@@ -1,6 +1,6 @@
 .library{
   margin-top: 50px;
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
@@ -35,7 +35,9 @@
       height: 300px;
   }
   .embed-spotify{
-    display: block;
+    gap: 1rem;
+    flex-direction: column;
+    display: flex
   }
 }
 @media screen and (max-width: 426px){
