--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -14,8 +14,7 @@ nav h3 {
   margin-bottom: 0;
   align-self: center;
   margin-left: 2vw;
-  font-family: "Space Grotesk", serif;
-  font-optical-sizing: auto;
+  font-family: "Averia Serif Libre", serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -49,8 +48,7 @@ nav h3 {
 .desktop-menu, .mobile-menu li a {
   text-decoration: none;
   color: white;
-  font-family: "Space Grotesk", serif;
-  font-optical-sizing: auto;
+  font-family: "Kiwi Maru", serif;
   font-weight: 400;
   font-style: normal;
 }
