--- a/source/stylesheets/components/_parallax.scss
+++ b/source/stylesheets/components/_parallax.scss
@@ -65,7 +65,7 @@
   text-align: center;
   font-size: 3rem;
   color: #fff;
-  font-family: "Space Mono", serif;
+  font-family: "Averia Serif Libre", serif;
   font-weight: 700;
   font-style: normal;
 }
