updated youtube sources

--- a/source/partials/footer.html.erb
+++ b/source/partials/footer.html.erb
@@ -2,6 +2,7 @@
   <ul>
     <li><a href="#Home"><i class="fa-brands fa-spotify"></i></a></li>
     <li><a href="#About"><i class="fa-brands fa-instagram"></i></a></li>
+    <li><a href="#Portfolio"><i class="fa-brands fa-youtube"></i></a></li>
     <li><a href="#Portfolio"><i class="fa-brands fa-soundcloud"></i></a></li>
   </ul>
 </footer>
