--- a/source/partials/portfolio.html.erb
+++ b/source/partials/portfolio.html.erb
@@ -2,22 +2,22 @@
 
 <div class="portfolio-card tab">
   <div class="portfolio-text animation-show">
-    <h2>Video Title</h2>
+    <h2>A Look In Sacramento, California</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
   </div>
   <div class="portfolio-video animation-show">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/kzjSF2VxAjE?si=TqJ9UeB-iiaKj4EK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/IFleNgOaE1w?si=rLuhijiHmWQGkf5y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </div>
 
 <div class="portfolio-card tab reverse">
   <div class="portfolio-video animation-show">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/FW6sqMEr85Y?si=Hgh0zTrP6vAAsP_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WuLTFC1kbHc?si=KQzj2ljatxOkOhop&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
   <div class="portfolio-text animation-show">
-    <h2>Video Title</h2>
+    <h2>A Look In Krabi, Thailand</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
@@ -26,25 +26,13 @@
 
 <div class="portfolio-card tab">
   <div class="portfolio-text animation-show">
-    <h2>Video Title</h2>
+    <h2>A Look In Hoi An, Vietnam</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
   </div>
   <div class="portfolio-video animation-show">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DNN2cdf2ZHk?si=e26237hxdZr0SA1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
-</div>
-
-<div class="portfolio-card tab reverse">
-  <div class="portfolio-video animation-show">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/W3nEvc7-xMo?si=079oTZpqnEZKPabP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
-  <div class="portfolio-text animation-show">
-    <h2>Video Title</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
+  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/wcfqa4ru6QE?si=vi6VkM6-AnmMsByb&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </div>
 
