--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -16,7 +16,7 @@ footer ul {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin-right: 2vw;
+  padding: 0;
 }
 footer ul li a {
   text-decoration: none;
