--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,8 +1,8 @@
 footer {
-  border-top: 1px solid white;
+  border-top: 1px solid #F0EAD6;
   background-color: black;
   width: 100%;
-  height: 5vh;
+  height: 10vh;
   bottom: 0;
   z-index: 30;
   display: flex;
