--- a/source/stylesheets/components/_intro.scss
+++ b/source/stylesheets/components/_intro.scss
@@ -1,6 +1,6 @@
 .intro{
   min-height: 50vh;
-  color: #eee;
+  color: #F0EAD6;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -35,7 +35,7 @@
   padding: 10px 50px;
   border: 1px solid #591F1D;
   border-radius: 5px;
-  color: #fff;
+  color: #F0EAD6;
   font-family: "Kiwi Maru", serif;
   font-weight: 400;
   font-style: normal;
