--- a/source/stylesheets/components/_library.scss
+++ b/source/stylesheets/components/_library.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
-  color: #fff;
+  color: #F0EAD6;
   margin-left: 10vw;
   margin-right: 10vw;
 }
