--- a/source/stylesheets/components/_parallax.scss
+++ b/source/stylesheets/components/_parallax.scss
@@ -64,7 +64,7 @@
   width: 100%;
   text-align: center;
   font-size: 3rem;
-  color: #fff;
+  color: #F0EAD6;
   font-family: "Averia Serif Libre", serif;
   font-weight: 700;
   font-style: normal;
