--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -15,7 +15,8 @@ footer ul {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items: start;
+  margin-top: 1rem;
   padding: 0;
 }
 footer ul li a {
