--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@ nav {
   border-bottom: 1px solid #F0EAD6;
   background-color: black;
   width: 100vw;
-  height: 5vh;
+  height: 7vh;
   position: fixed;
   top: 0;
   z-index: 30;
@@ -85,7 +85,10 @@ nav button {
     border: none;
     color: #F0EAD6;
     cursor: pointer;
-    margin-right: 2vw;
+    margin-right: 4vw;
     font-size: 1.5rem;
+  }
+  nav h3 {
+    margin-left: 4vw;
   }
 }
