adjusted z-index of all pressable elements

--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -26,6 +26,7 @@ footer ul li a {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  z-index: 30;
 }
 footer ul li a i {
   font-size: 1.5rem;
