--- a/source/stylesheets/components/_portfolio.scss
+++ b/source/stylesheets/components/_portfolio.scss
@@ -25,6 +25,9 @@
   width: 991px;
   height: 558px;
 }
+.portfolio-video{
+  z-index: 30;
+}
 
 @media screen and (max-width: 1440px){
   .portfolio-video{
