--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -26,6 +26,7 @@ nav h3 {
   justify-content: space-around;
   align-items: center;
   margin-right: 2vw;
+  list-style-type: none;
 }
 .mobile-menu {
   margin-top: 7vh;
@@ -46,7 +47,14 @@ nav h3 {
   border-bottom: 1px solid #F0EAD6;
   z-index: 99;
 }
-.desktop-menu, .mobile-menu li a {
+.desktop-menu li a {
+  text-decoration: none;
+  color: #F0EAD6;
+  font-family: "Kiwi Maru", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.mobile-menu li a {
   text-decoration: none;
   color: #F0EAD6;
   font-family: "Kiwi Maru", serif;
