setup contact section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,4 +3,5 @@
 <%= partial 'partials/intro' %>
 <%= partial 'partials/portfolio' %>
 <%= partial 'partials/library' %>
+<%= partial 'partials/contact' %>
 <%= partial 'partials/footer' %>
