--- a/source/stylesheets/components/_stars.scss
+++ b/source/stylesheets/components/_stars.scss
@@ -36,7 +36,7 @@
   //right:0;
   //bottom:0;
   width:100%;
-  height:465%;
+  height:490%;
   display:block;
   z-index: 0;
 }
@@ -59,8 +59,33 @@ animation:move-twink-back 200s linear infinite;
   animation:move-clouds-back 200s linear infinite;
 }
 
+@media screen and (max-width: 1440px){
+  .stars, .twinkling, .clouds {
+    height: 340%
+  }
+}
+@media screen and (max-width: 1024px){
+  .stars, .twinkling, .clouds {
+    height: 490%
+  }
+}
+@media screen and (max-width: 768px){
+  .stars, .twinkling, .clouds {
+    height: 550%
+  }
+}
 @media screen and (max-width: 426px){
   .stars, .twinkling, .clouds {
+    height: 620%
+  }
+}
+@media screen and (max-width: 376px){
+  .stars, .twinkling, .clouds {
     height: 590%
+  }
+}
+@media screen and (max-width: 321px){
+  .stars, .twinkling, .clouds {
+    height: 610%
   }
 }
