edited about section

--- a/source/partials/intro.html.erb
+++ b/source/partials/intro.html.erb
@@ -3,10 +3,35 @@
 <div class="clouds"></div>
 
 <div id="About" class="tab intro">
-  <h2 class="animation-show">Yayoi Maruoka</h2>
-  <%= image_tag 'library/card_logo.png', class:"animation-show" %>
+  <h2 class="animation-show">Yayoi</h2>
+  <%= image_tag 'library/logo.webp', class:"animation-show" %>
   <p class="animation-show">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque rem obcaecati libero eaque veniam est necessitatibus consectetur commodi non rerum, sapiente distinctio dignissimos! Dolorem eaque velit quam tenetur sapiente, qui veniam iste beatae officiis facilis aut expedita commodi, voluptatibus ullam voluptates! Explicabo, nisi. Odit, neque aliquid maiores minima cumque iusto?
+      Gravity Roomにはいろんなものが集まってきます。
+      <br>
+      私たちが重力によって地球に引っ張られているように・・。
+      <br>
+      そしてこの世界をいろいろな方法で冒険するのが、Gravity Roomのプロジェクトです。
+      <br>
+      音楽、写真、動画、言葉、など。
+      <br>
+      過ぎ去っていくその瞬間を記録するツールが溢れている時代に感謝。
+      <br>
+      <br>
+      In Gravity Room, all things come together.
+      <br>
+      Just as we are pulled toward the Earth by gravity itself...
+      <br>
+      The Gravity Room project explores this world in a variety of ways.
+      <br>
+      Through Music, Photos, Videos, Words… and more.
+      <br>
+      It is a blessing and reminder that we have the tools to record the moments that are constantly passing away.
+
+
   </p>
-  <button class="animation-show">Hire CTA</button>
+    <button class="animation-show">
+      <a href="#Contact">
+        Contact
+      </a>
+    </button>
 </div>
