--- a/source/stylesheets/components/_intro.scss
+++ b/source/stylesheets/components/_intro.scss
@@ -12,13 +12,13 @@
 }
 .intro h2 {
   font-family: "Kiwi Maru", serif;
-  font-weight: 400;
+  font-weight: 700;
   font-style: normal;
   margin-bottom: 16px;
 }
 .intro img{
-  width: 220px;
-  height: 130px;
+  width: 200px;
+  height: auto;
   border-radius: 50%;
 }
 .intro p{
@@ -28,17 +28,21 @@
   font-family: "Kiwi Maru", serif;
   font-weight: 400;
   font-style: normal;
-  margin-top: 16px;
+  margin-top: 24px;
 }
 .intro button{
   background-color: #da30a5fb;
-  padding: 10px 50px;
+  padding: 10px 30px;
   border: 1px solid #591F1D;
   border-radius: 20px;
   color: #F0EAD6;
   font-family: "Kiwi Maru", serif;
-  font-weight: 400;
+  font-weight: 700;
   font-style: normal;
   margin-top: 16px;
   z-index: 30;
+}
+.intro button a{
+  text-decoration: none;
+  color: #F0EAD6;
 }
