--- a/source/partials/navbar.html.erb
+++ b/source/partials/navbar.html.erb
@@ -3,15 +3,17 @@
   <ul class="desktop-menu">
     <li><a href="#Home">Home</a></li>
     <li><a href="#About">About</a></li>
-    <li><a href="#Portfolio">Portfolio</a></li>
-    <li><a href="#Gallery">Gallery</a></li>
+    <li><a href="#Videos">Videos</a></li>
+    <li><a href="#Photos">Photos</a></li>
+    <li><a href="#Music">Music</a></li>
     <li><a href="#Contact">Contact</a></li>
   </ul>
   <ul class="mobile-menu" style="display: none;">
     <li><a href="#Home">Home</a></li>
     <li><a href="#About">About</a></li>
-    <li><a href="#Portfolio">Portfolio</a></li>
-    <li><a href="#Gallery">Gallery</a></li>
+    <li><a href="#Videos">Videos</a></li>
+    <li><a href="#Photos">Photos</a></li>
+    <li><a href="#Music">Music</a></li>
     <li><a href="#Contact">Contact</a></li>
   </ul>
   <button onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
