--- a/source/partials/library.html.erb
+++ b/source/partials/library.html.erb
@@ -1,4 +1,4 @@
-<div id="Gallery" class="tab library">
+<div id="Photos" class="tab library">
   <div class="animation-show">
       <%= image_tag 'library/9.jpg' %>
       <p>Image Name</p>
@@ -22,7 +22,7 @@
   <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
   <div class="elfsight-app-3a6e78bd-fbd7-4c79-8416-ccd92ccd5ba3" data-elfsight-app-lazy></div>
 
-  <div class="embed-spotify">
+  <div id="Music" class="embed-spotify">
     <!--Spotify Embed Solo-->
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/164VgxTozx99XCinCB9ITR?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
