--- a/source/partials/portfolio.html.erb
+++ b/source/partials/portfolio.html.erb
@@ -1,4 +1,4 @@
-<div id="Portfolio" class="portfolio-container">
+<div id="Videos" class="portfolio-container">
 
 <div class="portfolio-card tab">
   <div class="portfolio-text animation-show">
