music section edited

--- a/source/stylesheets/components/_library.scss
+++ b/source/stylesheets/components/_library.scss
@@ -25,6 +25,9 @@
 #eapps-instagram-feed-1 {
   margin-bottom: 5rem;
 }
+.playlist-music{
+  margin-top: 1rem;
+}
 
 @media screen and (max-width: 768px){
   .library{
