--- a/source/partials/library.html.erb
+++ b/source/partials/library.html.erb
@@ -24,10 +24,14 @@
 
   <div id="Music" class="embed-spotify">
     <!--Spotify Embed Solo-->
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/164VgxTozx99XCinCB9ITR?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <div class="solo-music">
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3vbXUUQLZUwtRpagZ8cErD?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
 
     <!--Spotify Embed Playlist-->
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/78Y5mQFFIPF2K2ZGDy0kfi?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <div class="playlist-music">
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6bbK8c1wf2KA6e3a44DT8x?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
   </div>
 
 </div>
