edited footer links

--- a/source/partials/footer.html.erb
+++ b/source/partials/footer.html.erb
@@ -1,8 +1,8 @@
 <footer>
   <ul>
-    <li><a href="#Home"><i class="fa-brands fa-spotify"></i></a></li>
-    <li><a href="#About"><i class="fa-brands fa-instagram"></i></a></li>
-    <li><a href="#Portfolio"><i class="fa-brands fa-youtube"></i></a></li>
-    <li><a href="#Portfolio"><i class="fa-brands fa-soundcloud"></i></a></li>
+    <li><a href="https://open.spotify.com/artist/3vbXUUQLZUwtRpagZ8cErD" target="_blank"><i class="fa-brands fa-spotify"></i></a></li>
+    <li><a href="https://www.instagram.com/yayoi0410/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+    <li><a href="https://www.youtube.com/@gravity_room" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+    <li><a href="https://soundcloud.com/gravityroom4" target="_blank"><i class="fa-brands fa-soundcloud"></i></a></li>
   </ul>
 </footer>
