updated video section

--- a/source/partials/portfolio.html.erb
+++ b/source/partials/portfolio.html.erb
@@ -3,9 +3,18 @@
 <div class="portfolio-card tab">
   <div class="portfolio-text animation-show">
     <h2>A Look In Sacramento, California</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
+    <p>
+      カリフォルニア州の州都、サクラメント。
+      <br><br>
+      City of treesと言われるサクラメントでは、ドライブ中たくさんの木のトンネルを走った。
+      州都ながらもほどよく都会で、今まで行ったアメリカとはまた違う経験ができた。
+      オールドサクラメントは、かわいい雰囲気で色んなお店があって、歩いてるだけで楽しい。
+    </p>
+    <p>
+      In Sacramento, which is known as the "City of Trees," I drove through many tree-lined tunnels.
+      Though it’s the state capital, it has a balanced, not-too-urban feel, offering a different experience compared to other places in the U.S.
+      Old Sacramento has a charming atmosphere with various shops, and just walking around is a lot of fun.
+    </p>
   </div>
   <div class="portfolio-video animation-show">
   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/IFleNgOaE1w?si=rLuhijiHmWQGkf5y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -18,18 +27,31 @@
   </div>
   <div class="portfolio-text animation-show">
     <h2>A Look In Krabi, Thailand</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
+    <p>
+      タイのビーチリゾート地、クラビ。
+      <br><br>
+      ピピ島の海の青さ！空は壮大で、とてつもなく大きな岩やターコイズブルーの海など、やっぱり一番のアートは大自然かもしれないと何度も思った。ビーチサイドカフェは絶対にまた行きたい場所。
+    </p>
+    <p>
+      Krabi is a beach resort in Thailand. The blue of the sea around Phi Phi Islands is amazing! With the boundless sky, enormous rocks, and turquoise sea, every time I opened my eyes I couldn't help but think that perhaps this was one of the greatest arts of nature itself.
+      The beachside café is a place I definitely want to visit again.
+    </p>
   </div>
 </div>
 
 <div class="portfolio-card tab">
   <div class="portfolio-text animation-show">
     <h2>A Look In Hoi An, Vietnam</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ipsum quas temporibus quia sapiente porro, nostrum autem quod officia adipisci ut laudantium suscipit hic voluptatibus atque aliquid dignissimos quam dicta!</p>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quas optio a perferendis veniam sint perspiciatis veritatis, ab quidem animi doloremque, saepe minima ullam dolore dicta fuga odio cum enim.</p>
+    <p>
+      ベトナム、ホイアン。
+      <br><br>
+      夜は町全体にランプが灯り、優しく魅惑的な雰囲気に。
+      Grabを使えばどこでも行けるけど、町の人たちと同じようにバイクを使うとさらにホイアンを感じられた。
+    </p>
+    <p>
+      At night, lamps light up the entire town, creating a gentle and enchanting atmosphere.
+      With Grab, you can go anywhere, but using a motorbike, just like the locals, allows you to feel even more of Hoi An.
+    </p>
   </div>
   <div class="portfolio-video animation-show">
   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/wcfqa4ru6QE?si=vi6VkM6-AnmMsByb&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
