--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -2,11 +2,10 @@
 
   <h1 class="animation-show">Contact Me</h1>
   <div class="border animation-show"></div>
-  <form class="contact-form animation-show" action="index.html" method="post">
-    <input type="text" class="contact-form-text" placeholder="Your name">
-    <input type="email" class="contact-form-text" placeholder="Your email">
-    <input type="text" class="contact-form-text" placeholder="Your phone">
-    <textarea class="contact-form-text" placeholder="Your message"></textarea>
+  <form class="contact-form animation-show" action="https://formsubmit.co/gravityroom4@gmail.com" method="post">
+    <input type="text" class="contact-form-text" placeholder="Name">
+    <input type="email" class="contact-form-text" placeholder="Email">
+    <textarea class="contact-form-text" placeholder="Message"></textarea>
     <input type="submit" class="contact-form-btn" value="Send">
   </form>
 </div>
